tests/NormalTests/paczka2/big_fuzzy/98647396.err
Error in line 5: S529 S529 46,4
Error in line 25: HP5vD A836 94,6
Error in line 21: S529 A836 44,2
Error in line 45: HP5vD S121 24,6
Error in line 44: S529 S529 91,3
Error in line 48: S529 A836 99,3
Error in line 60: R9lo S51 41,2
Error in line 70: HP5vD S529 86,2
Error in line 78: qjwe3 S529 36,8
Error in line 92: nXibtpf8bd A836 27,1
Error in line 96: nXibtpf8bd S121 22,3
Error in line 99: EJfwfaJEQ 51 65,9
Error in line 105: nXibtpf8bd S529 63,7
Error in line 106: HP5vD A836 53,9
Error in line 104: S529 A836 67,7
Error in line 116: HP5vD S529 24,2
Error in line 132: HP5vD S51 9,5
Error in line 131: S529 S121 51,6
Error in line 136: nXibtpf8bd S51 23,4
Error in line 140: qjwe3 S529 25,9
Error in line 137: S529 S51 92,1
Error in line 157: HP5vD S121 75,5
Error in line 158: nXibtpf8bd S529 19,5
Error in line 160: R9lo S529 42,0
Error in line 154: EJfwfaJEQ A836 5,8
Error in line 163: R9lo S51 10,2
Error in line 165: R9lo S529 96,6
Error in line 173: R9lo S121 91,8
Error in line 164: EJfwfaJEQ S121 73,8
Error in line 178: R9lo S51 86,5
Error in line 159: HP5vD S529 86,7
Error in line 185: R9lo S121 59,8
Error in line 190: Bd9Rm S529 37,0
Error in line 191: Bd9Rm S51 33,3
Error in line 193: Bd9Rm A836 52,2
Error in line 196: nXibtpf8bd A836 54,2
Error in line 198: HP5vD S121 87,3
Error in line 201: qjwe3 S121 90,9
Error in line 209: HP5vD S529 74,2
Error in line 235: R9lo S51 4,4
Error in line 229: S529 A836 21,2
Error in line 239: qjwe3 S529 28,32
Error in line 240: qjwe3 S529 60,6
Error in line 232: EJfwfaJEQ S121 92,8
Error in line 246: EJfwfaJEQ S529 54,6
